objects/Training_Events__c.object
<CustomObject>
    <fields>
        <fullName>Training_Location_State__c</fullName>
        <label>Training State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <inlineHelpText>Training Location</inlineHelpText>
        <label>Training Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Office_Title__c</fullName>
        <formula>Training_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Office Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Zip__c</fullName>
        <label>Training Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scheduling_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Customer Declined</fullName>
                </value>
                <value>
                    <fullName>Incorrect Product</fullName>
                </value>
                <value>
                    <fullName>Pre-Approval</fullName>
                </value>
                <value>
                    <fullName>Returned to Sales</fullName>
                </value>
                <value>
                    <fullName>Returned to Sales - Reschedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_Test__c</fullName>
        <label>Written Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Days_from_Closed_Won_to_TE_Created__c</fullName>
        <formula>Date_of_TE_creation__c -  Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days from Closed Won to TE Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Training Event</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Training Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event</pluralLabel>
    <recordTypes>
        <fullName>AES_Event</fullName>
        <active>true</active>
        <description>To be used for Aquatics Examiner Service</description>
        <label>AES Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Event</fullName>
        <active>true</active>
        <label>Training Event</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MultiJurisdictional_Account</fullName>
        <active>true</active>
        <description>If opportunity is yes on multi and stage is closed won then multi account field on TE must be filled</description>
        <errorConditionFormula>AND
(ISPICKVAL(Opportunity__r.Multi_Jurisdictional__c ,&quot;yes&quot;),
(ISPICKVAL( Opportunity__r.StageName ,&quot;Closed Won&quot;)),
ISBLANK(Billing_Account__c))</errorConditionFormula>
        <errorMessage>When the MultiJuridictional drop down on Opportunity is &quot;Yes&quot; and the Stage is &quot;Closed Won&quot;, you must enter a value in Billing Account on the Training Event.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Type_NoContract_Upsell_Check</fullName>
        <active>true</active>
        <description>If opportunity  Type is Contract/No Upsell, Business Account is required</description>
        <errorConditionFormula>AND
(ISPICKVAL( Opportunity__r.Type ,&quot;No Contract/Upsell&quot;),
ISBLANK(Billing_Account__c)
)</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Billing Account is required for opportunity type &quot;No Contract/Upsell&quot;</errorMessage>
    </validationRules>
</CustomObject>